test refactoring #2